--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> </title>
+    <title>Home page</title>
   </head>
 
   <body>
     <h1>Home Page</h1>
     <ul>
       {% for sport in sports %}
-      <li><a href="{{sport.sport}}">{{ sport.sport }}</a></li>
-      {% endfor %}
+      <li><a href="analysis?sport={{sport.sport}}">{{ sport.sport }}</a></li>
+      {% for league in sport.leagues %}
+      <p>League name: {{league.league_name}}</p>
+      <p>Current season: {{league.current_season}}</p>
+      {% endfor %} {% endfor %}
     </ul>
   </body>
 </html>
