--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title> </title>
-  </head>
-
-  <body>
-    <h1>AFL</h1>
-  </body>
-</html>
+{% extends "layout.html" %} {% block content %}
+<h1>AFL</h1>
+{% endblock content %}
