--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="{{ url_for('static', filename = 'main.css') }}"
+      href="{{ url_for('static', filename = 'css/main.css') }}"
     />
   </head>
 
@@ -40,7 +40,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
               <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="/all_sports">All Sports</a>
+                <a class="nav-item nav-link" href="/analysis?sport=all-sports"
+                  >All Sports</a
+                >
                 {% for sport in sports %}
                 <a
                   class="nav-item nav-link"
