Starting to create the analysis pages

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %} {% block content %}
-<h1>AFL</h1>
+<script src="{{ url_for('static', filename = 'js/analysis.js') }}"></script>
+
+<h1 id="title">?sport?</h1>
 
 {% endblock content %}
