Adding buttons for each league

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -10,8 +10,10 @@
   </script>
 </div> -->
 
+<div id="league_btns"></div>
+
 <div>
-  <a class="btn btn-primary" role="button" id="league_btns"></a>
+  <ul></ul>
 </div>
 
 <button class="btn btn-success">Report percentage favourite</button>
