Loading seasons and storing selections in variables

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -12,11 +12,12 @@
 
 <div id="league_btns"></div>
 
-<div>
-  <ul></ul>
-</div>
+<div id="season_btns"></div>
 
-<button class="btn btn-success">Report percentage favourite</button>
+<div>
+  <br />
+  <button class="btn btn-success">Report percentage favourite</button>
+</div>
 
 <div>
   <p id="percentage_fav">Please choose a season to review</p>
