Pulling through percentage favourite

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -11,16 +11,12 @@
 </div> -->
 
 <div id="league_btns"></div>
-
+<br />
 <div id="season_btns"></div>
+<br />
 
 <div>
-  <br />
-  <button class="btn btn-success">Report percentage favourite</button>
-</div>
-
-<div>
-  <p id="percentage_fav">Please choose a season to review</p>
+  <p id="analysis_output">Please choose a league to review</p>
 </div>
 
 <script src="{{ url_for('static', filename = 'js/analysis.js') }}"></script>
