Save matplotlib to file

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -10,8 +10,14 @@
   </script>
 </div> -->
 
+<div>
+  <p>Choose league to review:</p>
+</div>
 <div id="league_btns"></div>
 <br />
+<div id="season_text">
+  <p></p>
+</div>
 <div id="season_btns"></div>
 <br />
 
