--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -2,22 +2,23 @@
 
 <h1 id="title">?sport?</h1>
 
-<!-- <div id="league_btns">
-  <script type="text/javascript">
-    myvar = "{{sports|tojson}}";
-    var parsed = JSON.parse(myvar);
-    document.write(parsed[0]);
-  </script>
-</div> -->
+<div>
+  <img id="sport_img" src={{ url_for('static',filename='img/afl.jpg') }}
+  class="img-fluid mx-auto d-block half-size" alt="Image of the chosen sport">
+</div>
 
 <div>
   <p>Choose league to review:</p>
 </div>
+
 <div id="league_btns"></div>
+
 <br />
+
 <div id="season_text">
   <p></p>
 </div>
+
 <div id="season_btns"></div>
 <br />
 
