--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -3,8 +3,11 @@
 <h1 id="title">?sport?</h1>
 
 <div>
-  <img id="sport_img" src={{ url_for('static',filename='img/afl.jpg') }}
-  class="img-fluid mx-auto d-block half-size" alt="Image of the chosen sport">
+  <img
+    id="sport_img"
+    class="img-fluid mx-auto d-block half-size"
+    alt="Image of the chosen sport"
+  />
 </div>
 
 <div>
