--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -26,7 +26,19 @@
 <br />
 
 <div>
-  <p id="analysis_output">Please choose a league to review</p>
+  <p id="perc_fav">Please choose a league to review</p>
+</div>
+
+<div>
+  <p id="betting_results"></p>
+</div>
+
+<div>
+  <p id="betting_input"></p>
+</div>
+
+<div>
+  <p id="betting_output"></p>
 </div>
 
 <script src="{{ url_for('static', filename = 'js/analysis.js') }}"></script>
