--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,17 +1,21 @@
 body {
-  background: #fafafa;
-  color: #333333;
+  background-image: linear-gradient(
+    180deg,
+    rgb(59, 161, 192),
+    rgb(46, 121, 144)
+  );
+  color: #f4eded;
   margin-top: 5rem;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
   color: #444444;
-}
+} */
 
 .bg-steel {
   background-color: #5f788a;
@@ -27,14 +31,6 @@ h6 {
 
 .site-header .navbar-nav .nav-link.active {
   font-weight: 500;
-}
-
-.content-section {
-  background: #ffffff;
-  padding: 10px 20px;
-  border: 1px solid #dddddd;
-  border-radius: 3px;
-  margin-bottom: 20px;
 }
 
 .half-size {
