--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,20 @@
 body {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     180deg,
     rgb(59, 161, 192),
     rgb(46, 121, 144)
-  );
-  color: #f4eded;
+  ); */
+  background-color: azure;
+  color: #797979;
   margin-top: 5rem;
+}
+
+.bg-season {
+  background-color: rgb(231, 255, 255);
+}
+
+.bg-result {
+  background-color: rgb(225, 255, 255);
 }
 
 /* h1,
