--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row">
-  <div class="col-2 rounded border border-primary">
+  <div class="col-2 rounded">
     <div>
       <p>Choose league to review:</p>
     </div>
@@ -13,7 +13,7 @@
     <div id="league_btns"></div>
   </div>
 
-  <div class="col-2 rounded border border-primary">
+  <div class="col-2 rounded bg-season">
     <div id="season_text">
       <p></p>
     </div>
@@ -22,7 +22,7 @@
     <br />
   </div>
 
-  <div class="col-8 rounded border border-primary">
+  <div class="col-8 rounded bg-result">
     <div>
       <img
         id="sport_img"
