Altering the analysis page layout

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -13,7 +13,7 @@
     <div id="league_btns"></div>
   </div>
 
-  <div class="col-2 rounded bg-season">
+  <div class="col-2 rounded">
     <div id="season_text">
       <p></p>
     </div>
@@ -22,16 +22,17 @@
     <br />
   </div>
 
-  <div class="col-8 rounded bg-result">
+  <div class="col-8 rounded">
     <div>
       <img
         id="sport_img"
-        class="img-fluid mx-auto d-block half-size"
+        class="img-fluid d-block half-size"
         alt="Image of the chosen sport"
       />
     </div>
+    <br />
     <div>
-      <p id="perc_fav">Please choose a league to review</p>
+      <p id="perc_fav"><-- Please choose a league to review</p>
     </div>
 
     <div>
