Adding chart.js

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -23,13 +23,14 @@
   </div>
 
   <div class="col-8 rounded">
-    <div>
+    <div id="img-div">
       <img
         id="sport_img"
         class="img-fluid d-block half-size"
         alt="Image of the chosen sport"
       />
     </div>
+    <div style="width: 800px"><canvas id="perc_graph"></canvas></div>
     <br />
     <div>
       <p id="perc_fav"><-- Please choose a league to review</p>
