--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,7 @@
       href="{{ url_for('static', filename = 'css/main.css') }}"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
 
   <body>
