--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -30,7 +30,7 @@
         alt="Image of the chosen sport"
       />
     </div>
-    <div style="width: 800px"><canvas id="perc_graph"></canvas></div>
+    <div id="canvas-div" style="width: 800px"></div>
     <br />
     <div>
       <p id="perc_fav"><-- Please choose a league to review</p>
