--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row">
-  <div class="col-2 rounded">
+  <div class="col-sm-12 col-md-6 col-lg-2 rounded">
     <div>
       <p>Choose league to review:</p>
     </div>
@@ -13,7 +13,7 @@
     <div id="league_btns"></div>
   </div>
 
-  <div class="col-2 rounded">
+  <div class="col-sm-12 col-md-6 col-lg-2 rounded">
     <div id="season_text">
       <p></p>
     </div>
@@ -22,7 +22,7 @@
     <br />
   </div>
 
-  <div class="col-8 rounded">
+  <div class="col-sm-12 col-md-12 col-lg-8 rounded">
     <div id="img-div">
       <img
         id="sport_img"
@@ -30,7 +30,7 @@
         alt="Image of the chosen sport"
       />
     </div>
-    <div id="canvas-div" style="width: 800px"></div>
+    <div id="canvas-div"></div>
     <br />
     <div>
       <p id="perc_fav"><-- Please choose a league to review</p>
