All Seasons percentage graph and analysis

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -5,15 +5,15 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-12 col-md-6 col-lg-2 rounded">
-    <div>
+  <div id="league_col" class="col-sm-12 col-md-6 col-lg-2 rounded">
+    <div id="league_heading">
       <p>Choose league to review:</p>
     </div>
 
     <div id="league_btns"></div>
   </div>
 
-  <div class="col-sm-12 col-md-6 col-lg-2 rounded">
+  <div id="season_col" class="col-sm-12 col-md-6 col-lg-2 rounded">
     <div id="season_text">
       <p></p>
     </div>
@@ -22,7 +22,7 @@
     <br />
   </div>
 
-  <div class="col-sm-12 col-md-12 col-lg-8 rounded">
+  <div id="result_col" class="col-sm-12 col-md-12 col-lg-8 rounded">
     <div id="img-div">
       <img
         id="sport_img"
