--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <div><h1>Sports Data Analysis</h1></div>
 
 <div>
-  <img src= {{ url_for('static',filename='img/all-sports.jpg') }}
+  <img src= {{ url_for('static',filename='img/home.jpg') }}
   class="img-fluid mx-auto d-block half-size" alt="All Sports" />
 </div>
 
